--- a/audience.html
+++ b/audience.html
@@ -43,8 +43,9 @@
 <div id="thankyou">🎉 Thank you so much for your participation! 🎉</div>
 
 <script>
-  const socket = io("https://presentation-app-server.onrender.com"); // Same as in presenter.html
+  const socket = io("https://presentation-app-server.onrender.com"); // ✅ make sure this matches presenter
   const user_id = Math.random().toString(36).substring(2, 10);
+  let currentQuestionIndex = 0;
 
   const questions = [
     { q: "How old are you?", a: ["<13", "13–14", "15–16", "17–18", "18+"] },
@@ -58,8 +59,6 @@
     { q: "What music gets you hyped?", a: ["Hip-hop", "Pop", "Rock", "Chill", "EDM"] },
     { q: "Would you let AI write your homework?", a: ["Absolutely", "Maybe", "No way", "Already did 🤫"] }
   ];
-
-  let currentQuestionIndex = 0;
 
   function renderQuestion(index) {
     const q = questions[index];
@@ -76,9 +75,9 @@
 
     questionDiv.innerText = q.q;
     answersDiv.innerHTML = "";
+    thankyouDiv.style.display = "none";
     questionDiv.style.display = "block";
     answersDiv.style.display = "block";
-    thankyouDiv.style.display = "none";
 
     q.a.forEach((choice, i) => {
       const btn = document.createElement("button");
@@ -89,7 +88,7 @@
 
         socket.emit("submit_vote", {
           user_id: user_id,
-          question: currentQuestionIndex, // Key change: use 'question' not 'question_index'
+          question: index,
           choice: i
         });
       };
@@ -98,14 +97,16 @@
   }
 
   socket.on("connect", () => {
-    console.log("Connected as", user_id);
+    console.log("Audience connected as", user_id);
   });
 
+  // ✅ FIXED: match event name with presenter.js
   socket.on("set_question", (index) => {
     currentQuestionIndex = index;
     renderQuestion(index);
   });
 
+  // Load first one manually in case there's no event yet
   renderQuestion(currentQuestionIndex);
 </script>
 
